# CoMeet-REST

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
comeet/: asgi.py  settings.py  urls.py
commit/: urls.py
templates/user/: mypage.html
user/: admin.py  models.py  serializers.py  urls.py  views.py
